add header (html)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sabanna-Hirokazu</title>
 </head>
-<body>
+<body style="margin:0; padding:0;">
+    <header style="position:fixed; width:100%; top:0;">
+        <div style="position:absolute; height:100%; width: 70%;">
+            <ul style="position:absolute; top:62px; right:79px; width:auto; font-size: 15px; ">
+                <li style="margin: 0; padding: 0;"><a style="text-decoration:none;">Home</a></li>
+                <li style="margin: 0; padding: 0;">Profile</li>
+                <li style="margin: 0; padding: 0;">Blog</li>
+                <li style="margin: 0; padding: 0;">Contact</li>
+            </ul>
+        </div>
+    </header>
     <p>Hello World!</p>
 </body>
 </html>
