change index.html design

--- a/index.html
+++ b/index.html
@@ -1,22 +1,380 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sabanna-Hirokazu</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="This web pages created by Hirokazu. This is .">
+<meta name="keywords" content="">
+
+<title>HirokPage</title>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" charset="UTF-8">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js" charset="UTF-8"></script>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="https://jqueryui.com/datepicker/resources/demos/style.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<link href='https://fonts.googleapis.com/css?family=Actor|Josefin+Sans|Lato:300|Montserrat|&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<style type=text/css>
+
+.index_section4{
+padding-top:0px;padding-bottom:0px;padding-left:0;padding-right:0;margin-left:0;margin-right:0;margin-top:0px;margin-bottom:0px;-webkit-border-horizontal-spacing:0;-webkit-border-vertical-spacing:0;
+}
+
+.navbar .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+color: #000000;
+background-color: #FFFFFF;
+}
+.navbar {
+border:0px;
+background-color: #EEAD0E;
+border-radius:0px;
+}
+.navbar .navbar-nav > li > a {
+color: #FFFFFF;
+font-size:25px;
+font-family:"Josefin Sans";
+}
+.navbar-brand {
+color: #FFFFFF !important;
+font-size:25px;
+font-family:"Josefin Sans";
+}
+.navbar .navbar-toggle .icon-bar {
+    background-color: #FFFFFF;
+}
+.navbar-toggle {
+background-color: transparent;
+}
+.navbar .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+background-color: #FFFFFF;
+}
+.navbar-toggle:hover .icon-bar {
+background-color: #000000;
+}
+
+
+.navbar-brand,
+.navbar-nav li a {
+line-height: 59px;
+height: 59px;
+padding-top: 0;
+}
+.navbar-toggle{
+margin-top:17px;
+margin-bottom:17px;
+}
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse{
+400px;
+}
+.navbar-nav{
+margin-
+margin-bottom:0px;
+}
+.index_navbar5{
+padding-top:0%;padding-bottom:0%;padding-left:0%;padding-right:0%;margin-left:0%;margin-right:0%;margin-top:0px;margin-bottom:48px;}
+
+.index_tableGrid5snippet0{z-index:11;font-size:25px;font-family:"Montserrat";padding-padding-bottom:0px;padding-left:0px;padding-right:0px;margin-left:0px;margin-right:0px;margin-margin-bottom:0px;border-style:none;border-width:1px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:center;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:0;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:shape;shapeBackgroundColor:EEAD0E;nlines:1;snippetFormattingFlag:1;}
+
+.index_tableGrid5snippet1{z-index:11;font-size:25px;font-family:"Josefin Sans";padding-padding-bottom:0px;padding-left:0px;padding-right:0px;margin-left:0px;margin-right:0px;margin-margin-bottom:0px;border-style:none;border-width:1px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:center;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:0;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:shape;shapeBackgroundColor:EEAD0E;nlines:1;snippetFormattingFlag:1;}
+
+.index_tableGrid5snippet2{z-index:11;font-size:25px;font-family:"Josefin Sans";padding-padding-bottom:0px;padding-left:0px;padding-right:0px;margin-left:0px;margin-right:0px;margin-margin-bottom:0px;border-style:none;border-width:1px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:center;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:0;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:shape;shapeBackgroundColor:EEAD0E;nlines:1;snippetFormattingFlag:1;}
+
+.index_tableGrid5snippet3{z-index:11;font-size:25px;font-family:"Josefin Sans";padding-padding-bottom:0px;padding-left:0px;padding-right:0px;margin-left:0px;margin-right:0px;margin-margin-bottom:0px;border-style:none;border-width:1px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:center;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:0;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:shape;shapeBackgroundColor:EEAD0E;nlines:1;snippetFormattingFlag:1;}
+
+.index_tableGrid5snippet4{z-index:11;font-size:25px;font-family:"Josefin Sans";padding-padding-bottom:0px;padding-left:0px;padding-right:0px;margin-left:0px;margin-right:0px;margin-margin-bottom:0px;border-style:none;border-width:1px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:center;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:0;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:shape;shapeBackgroundColor:EEAD0E;nlines:1;snippetFormattingFlag:1;}
+
+.index_section4_0{
+height:100%;
+padding-right:0px;
+padding-left:0px;
+}
+
+.index_section4_column
+{
+padding:0px;
+}
+
+.index_section6{
+padding-top:30px;padding-bottom:30px;padding-left:5%;padding-right:5%;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;-webkit-border-horizontal-spacing:0;-webkit-border-vertical-spacing:0;
+}
+
+#index_background6 {
+position: absolute;
+z-index:-100;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.index_text7{font-size:20px;color:#696969;background-color:#CLEAR0;font-family:"Lato";border-style:none;border-width:0px;border-color:#000000;text-align:center;border-radius:0.000000px;-moz-border-radius:0.000000px;shadowOpacity:0;shadowRadius:0;shadowOffSetY:0;textAlpha:1.000000;text-indent:0px;;line-height:1.250000; !important;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px;margin-top:0px;margin-bottom:0px;margin-left:0px;margin-right:0px;}.index_text7 a:link {text-decoration: none; color: #696969;font-weight:normal;}.index_text7 a:visited {text-decoration: none; color: #696969;font-weight:normal;}
+
+.index_section6_0{
+width:100%;
+height:100vh;
+padding-right:0px;
+padding-left:0px;
+overflow:hidden;
+}
+
+.index_section6_column
+{
+padding:0px;
+}
+
+.index_section3{
+padding-top:0px;padding-bottom:0px;padding-left:5%;padding-right:5%;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;-webkit-border-horizontal-spacing:0;-webkit-border-vertical-spacing:0;
+background: url(index/image4o.JPG) no-repeat center top;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+min-height:300.000000px;
+}
+
+.index_snippet8{z-index:8;font-size:15px;color:#555555;font-family:"Lato";padding-top:0px;padding-bottom:78px;padding-left:0px;padding-right:0px;margin-left:0%;margin-right:0%;margin-top:2px;margin-top:2px;margin-bottom:202px;border-style:none;border-width:0px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:left;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:-99;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:;shapeBackgroundColor:CLEAR0;nlines:1;snippetFormattingFlag:1;line-height:1.250000 !important;}.index_snippet8 a:link {text-decoration: none; color: #555555;font-weight:normal;}.index_snippet8 a:visited {text-decoration: none; color: #555555;font-weight:normal;formType:;formTag:-99;formOptionTag:-99;formRequiredFlag:0;}
+
+.index_section3_0{
+height:100%;
+padding-right:0px;
+padding-left:0px;
+}
+
+.index_section3_column
+{
+padding:5px;
+}
+
+.index_section2{
+padding-top:0px;padding-bottom:0px;padding-left:5%;padding-right:5%;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;-webkit-border-horizontal-spacing:0;-webkit-border-vertical-spacing:0;
+background: url(index/image5o.JPG) no-repeat center top;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+min-height:300.000000px;
+}
+
+.index_snippet9{z-index:9;font-size:15px;color:#555555;font-family:"Lato";padding-top:0px;padding-bottom:78px;padding-left:0px;padding-right:0px;margin-left:0%;margin-right:0%;margin-top:0px;margin-top:0px;margin-bottom:204px;border-style:none;border-width:0px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:left;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:-99;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:;shapeBackgroundColor:CLEAR0;nlines:1;snippetFormattingFlag:1;line-height:1.250000 !important;}.index_snippet9 a:link {text-decoration: none; color: #555555;font-weight:normal;}.index_snippet9 a:visited {text-decoration: none; color: #555555;font-weight:normal;formType:;formTag:-99;formOptionTag:-99;formRequiredFlag:0;}
+
+.index_section2_0{
+height:100%;
+padding-right:0px;
+padding-left:0px;
+}
+
+.index_section2_column
+{
+padding:5px;
+}
+
+.index_section1{
+padding-top:0px;padding-bottom:0px;padding-left:5%;padding-right:5%;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;-webkit-border-horizontal-spacing:0;-webkit-border-vertical-spacing:0;
+background: url(index/image6o.JPG) no-repeat center top;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+min-height:300.000000px;
+}
+
+.index_snippet10{z-index:10;font-size:15px;color:#555555;font-family:"Lato";padding-top:0px;padding-bottom:78px;padding-left:0px;padding-right:0px;margin-left:0%;margin-right:0%;margin-top:4px;margin-top:4px;margin-bottom:200px;border-style:none;border-width:0px;border-color:#000000;border-radius:0px;-moz-border-radius:0px;;text-align:left;fixed:0;textAlpha:1.000000;indentFlag:0;text-indent:0px;shapeFlag:0;groupNumber:-99;tableNumber:-99;tableRowSpot:-99;tableColumnSpot:-99;templateName:(null);manualLayerIndex:0;linkType:;shapeBackgroundColor:CLEAR0;nlines:1;snippetFormattingFlag:1;line-height:1.250000 !important;}.index_snippet10 a:link {text-decoration: none; color: #555555;font-weight:normal;}.index_snippet10 a:visited {text-decoration: none; color: #555555;font-weight:normal;formType:;formTag:-99;formOptionTag:-99;formRequiredFlag:0;}
+
+.index_section1_0{
+height:100%;
+padding-right:0px;
+padding-left:0px;
+}
+
+.index_section1_column
+{
+padding:5px;
+}
+
+.container-fluid{
+padding-right:0px;
+padding-left:0px;
+}
+label{font-weight:normal !important;}
+
+@media (min-width:767px){
+.col-lg-1:nth-child(12n+1),
+.col-lg-2:nth-child(6n+1),
+.col-lg-3:nth-child(4n+1),
+.col-lg-4:nth-child(3n+1),
+.col-lg-6:nth-child(2n+1),
+.col-md-1:nth-child(12n+1),
+.col-md-2:nth-child(6n+1),
+.col-md-3:nth-child(4n+1),
+.col-md-4:nth-child(3n+1),
+.col-md-6:nth-child(2n+1){
+clear: none;
+}
+.col-sm-1:nth-child(12n+1),
+.col-sm-2:nth-child(6n+1),
+.col-sm-3:nth-child(4n+1),
+.col-sm-4:nth-child(3n+1),
+.col-sm-6:nth-child(2n+1){
+clear: left;
+}
+}
+@media (min-width:992px){
+.col-lg-1:nth-child(12n+1),
+.col-lg-2:nth-child(6n+1),
+.col-lg-3:nth-child(4n+1),
+.col-lg-4:nth-child(3n+1),
+.col-lg-6:nth-child(2n+1),
+.col-sm-1:nth-child(12n+1),
+.col-sm-2:nth-child(6n+1),
+.col-sm-3:nth-child(4n+1),
+.col-sm-4:nth-child(3n+1),
+.col-sm-6:nth-child(2n+1){
+clear: none;
+}
+.col-md-1:nth-child(12n+1),
+.col-md-2:nth-child(6n+1),
+.col-md-3:nth-child(4n+1),
+.col-md-4:nth-child(3n+1),
+.col-md-6:nth-child(2n+1){
+clear: left;
+}
+}
+@media (min-width:1200px){
+.col-md-1:nth-child(12n+1),
+.col-md-2:nth-child(6n+1),
+.col-md-3:nth-child(4n+1),
+.col-md-4:nth-child(3n+1),
+.col-md-6:nth-child(2n+1),
+.col-sm-1:nth-child(12n+1),
+.col-sm-2:nth-child(6n+1),
+.col-sm-3:nth-child(4n+1),
+.col-sm-4:nth-child(3n+1),
+.col-sm-6:nth-child(2n+1){
+clear: none;
+}
+.col-lg-1:nth-child(12n+1),
+.col-lg-2:nth-child(6n+1),
+.col-lg-3:nth-child(4n+1),
+.col-lg-4:nth-child(3n+1),
+.col-lg-6:nth-child(2n+1){
+clear: left;
+}}
+
+body {background-color:#FAFAFA;}
+
+</style>
+
 </head>
-<body style="margin:0; padding:0;">
-    <header style="position:fixed; width:100%; top:0;">
-        <div style="position:absolute; height:100%; width: 70%;">
-            <ul style="position:absolute; top:62px; right:79px; width:auto; font-size: 15px; ">
-                <li style="margin: 0; padding: 0;"><a style="text-decoration:none;">Home</a></li>
-                <li style="margin: 0; padding: 0;">Profile</li>
-                <li style="margin: 0; padding: 0;">Blog</li>
-                <li style="margin: 0; padding: 0;">Contact</li>
-            </ul>
-        </div>
-    </header>
-    <p>Hello World!</p>
+
+<body>
+
+<div class="container-fluid">
+<div class="row index_section4">
+
+<div class="index_section4_column index_section4_0 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+<nav class="navbar navbar-inverse index_navbar5 ">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#index_navbar5" aria-expanded="false" aria-controls="navbar">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="navbar-brand" href="#"><div class=index_tableGrid5snippet0 id=index_tableGrid5snippet0>
+Menu
+</div>
+</a>
+</div>
+<div id="index_navbar5" class="collapse navbar-collapse">
+<ul class="nav navbar-nav">
+
+<li><a href=""><div class=index_tableGrid5snippet1 id=index_tableGrid5snippet1>
+Home
+</div>
+</a></li>
+
+<li><a href="profile.html"><div class=index_tableGrid5snippet2 id=index_tableGrid5snippet2>
+Profile
+</div>
+</a></li>
+
+<li><a href=""><div class=index_tableGrid5snippet3 id=index_tableGrid5snippet3>
+Work
+</div>
+</a></li>
+
+<li><a href=""><div class=index_tableGrid5snippet4 id=index_tableGrid5snippet4>
+Contact
+</div>
+</a></li>
+
+</ul>
+</div>
+</div>
+</nav>
+
+</div>
+</div>
+
+</div>
+<div class="container-fluid">
+<div class="row index_section6">
+
+<div class="index_section6_column index_section6_0 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+<video poster="index/image3o.JPG" id="index_background6" playsinline autoplay muted loop>
+<source src="index/index_background10.mov" type="video/mp4">
+</video>
+<a href='http://wolf.aidaluu.com' target=_self><div class=index_text7 id=index_text7>Welcom! Hirokazu site.</div></a>
+
+</div>
+</div>
+
+</div>
+<div class="container-fluid">
+<div class="row index_section3">
+
+<div class="index_section3_column index_section3_0 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+<div class=index_snippet8 id=index_snippet8>
+Profile
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="container-fluid">
+<div class="row index_section2">
+
+<div class="index_section2_column index_section2_0 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+<div class=index_snippet9 id=index_snippet9>
+Work
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="container-fluid">
+<div class="row index_section1">
+
+<div class="index_section1_column index_section1_0 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+<div class=index_snippet10 id=index_snippet10>
+Contact
+</div>
+
+</div>
+</div>
+
+</div>
 </body>
 </html>
